tests/ui/resolve/issue-111727.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/issue-111727.rs:4:5
   |
LL |     std::any::Any::create();
   |     ^^^^^^^^^^^^^
   |
help: add `dyn` keyword before this trait
   |
LL |     <dyn std::any::Any>::create();
   |     ++++              +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
